--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,6 +98,7 @@
             android:gravity="center"
             android:hint="Answer"
             android:maxLines="1"
+            android:inputType="textShortMessage"
             android:padding="16dp"
             android:textAlignment="center"
             android:textSize="18sp" />
