Fixed Image Scaling

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,8 +74,8 @@
 
         <GridView
             android:id="@+id/grid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
             android:columnWidth="90dp"
             android:gravity="center"
             android:horizontalSpacing="0dp"
